Expanded Testing cleaned
Got rid of nan values in expanded testing

--- a/data_format1/Expanded Training And Testing Data.ipynb
+++ b/data_format1/Expanded Training And Testing Data.ipynb
@@ -198,7 +198,7 @@
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>6549 rows × 10 columns</p>\n",
+       "<p>6546 rows × 10 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -215,20 +215,20 @@
        "6547   116738      186     267       1200    2276.0        1101            0   \n",
        "6548   124951      184     656        145    3462.0        1111            0   \n",
        "\n",
-       "      age_range  gender  prob  \n",
-       "0           5.0     2.0   NaN  \n",
-       "1           5.0     2.0   NaN  \n",
-       "2           4.0     0.0   NaN  \n",
-       "3           4.0     0.0   NaN  \n",
-       "4           4.0     0.0   NaN  \n",
-       "...         ...     ...   ...  \n",
-       "6544        2.0     0.0   NaN  \n",
-       "6545        3.0     1.0   NaN  \n",
-       "6546        2.0     1.0   NaN  \n",
-       "6547        2.0     1.0   NaN  \n",
-       "6548        0.0     0.0   NaN  \n",
+       "     age_range gender  prob  \n",
+       "0          5.0    2.0   NaN  \n",
+       "1          5.0    2.0   NaN  \n",
+       "2          4.0    0.0   NaN  \n",
+       "3          4.0    0.0   NaN  \n",
+       "4          4.0    0.0   NaN  \n",
+       "...        ...    ...   ...  \n",
+       "6544       2.0    0.0   NaN  \n",
+       "6545       3.0    1.0   NaN  \n",
+       "6546       2.0    1.0   NaN  \n",
+       "6547       2.0    1.0   NaN  \n",
+       "6548       0.0    0.0   NaN  \n",
        "\n",
-       "[6549 rows x 10 columns]"
+       "[6546 rows x 10 columns]"
       ]
      },
      "execution_count": 2,
@@ -239,12 +239,36 @@
    "source": [
     "df_testing = pd.read_csv(\"./use_data/merged_dataset.csv\")\n",
     "df_testing['prob'] = np.nan\n",
+    "df_testing['gender'] = df_testing['gender'].fillna('2.0')\n",
+    "df_testing['age_range'] = df_testing['age_range'].fillna('0.0')\n",
+    "df_testing = df_testing[df_testing['brand_id'].notna()]\n",
     "df_testing"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 3,
+   "id": "e8ec096b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['prob']"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_testing.columns[df_testing.isna().any()].tolist()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "id": "3a05f407",
    "metadata": {},
    "outputs": [
@@ -460,7 +484,7 @@
        "[6549 rows x 10 columns]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -473,7 +497,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "57f1debe",
    "metadata": {},
    "outputs": [
@@ -592,7 +616,7 @@
        "[169 rows x 3 columns]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -604,7 +628,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "4ec96863",
    "metadata": {},
    "outputs": [],
@@ -617,7 +641,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "58bc0273",
    "metadata": {},
    "outputs": [
@@ -833,7 +857,7 @@
        "[385 rows x 10 columns]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -845,7 +869,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "782412a6",
    "metadata": {},
    "outputs": [],
