feat(FE): Test Profiles

--- a/data_format1/Category Profile.ipynb
+++ b/data_format1/Category Profile.ipynb
@@ -262,7 +262,7 @@
     }
    ],
    "source": [
-    "df = pd.read_csv(\"./use_data/expanded_training.csv\")\n",
+    "df = pd.read_csv(\"./use_data/expanded_testing.csv\")\n",
     "df"
    ]
   },
@@ -13193,7 +13193,7 @@
    "outputs": [],
    "source": [
     "\n",
-    "df_cat.to_csv('category_profile.csv',index=False)"
+    "df_cat.to_csv('test_category_profile.csv',index=False)"
    ]
   }
  ],
