--- a/data_format1/Item Profile.ipynb
+++ b/data_format1/Item Profile.ipynb
@@ -262,7 +262,7 @@
     }
    ],
    "source": [
-    "df = pd.read_csv(\"./use_data/expanded_training.csv\")\n",
+    "df = pd.read_csv(\"./use_data/expanded_testing.csv\")\n",
     "df"
    ]
   },
@@ -14080,7 +14080,7 @@
    "outputs": [],
    "source": [
     "\n",
-    "df_item.to_csv('item_profile.csv',index=False)"
+    "df_item.to_csv('test_item_profile.csv',index=False)"
    ]
   }
  ],
