--- a/Models/knn.ipynb
+++ b/Models/knn.ipynb
@@ -1,6 +1,14 @@
 {
  "cells": [
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# K-Nearest Neighbors Classifier"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -15,17 +23,54 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## K-Nearest Neighbors - Pre-Feature Selection"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Load Datasets"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
     "train_df = pd.read_csv(\"../data_format1/use_data/merged_df.csv\")\n",
-    "test_df = pd.read_csv('../data_format1/test_merged_df.csv')\n",
-    "train_complete, test_complete = train_test_split(train_df, test_size=0.2)\n",
+    "test_df = pd.read_csv('../data_format1/test_merged_df.csv')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Prepare Train Test Split"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train_complete, test_complete = train_test_split(train_df, test_size=0.2, random_state=550)\n",
     "X_train = train_complete.drop(['label'], axis=1)\n",
     "y_train = train_complete['label']"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### K-Nearest Neighbors Model (sklearn)"
    ]
   },
   {
@@ -50,7 +95,6 @@
    "source": [
     "from sklearn.neighbors import KNeighborsClassifier\n",
     "neigh = KNeighborsClassifier(n_neighbors=3)\n",
-    "\n",
     "neigh.fit(X_train, y_train)"
    ]
   },
@@ -61,16 +105,7 @@
    "outputs": [],
    "source": [
     "X_test = test_complete.drop(['label'], axis=1)\n",
-    "y_test = test_complete['label']"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "y_preds = neigh.predict(X_test)"
+    "y_test = np.asarray(test_complete['label'])"
    ]
   },
   {
@@ -79,22 +114,453 @@
    "metadata": {},
    "outputs": [
     {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>user_id</th>\n",
+       "      <th>item_id</th>\n",
+       "      <th>seller_id</th>\n",
+       "      <th>time_stamp</th>\n",
+       "      <th>1111 action count</th>\n",
+       "      <th>last month action count</th>\n",
+       "      <th>month_total_action_count</th>\n",
+       "      <th>merchant_female_count</th>\n",
+       "      <th>month_merchant_male_count</th>\n",
+       "      <th>merchant_buys</th>\n",
+       "      <th>...</th>\n",
+       "      <th>item_ageGroup_0_counts</th>\n",
+       "      <th>cat_monthly_action_count</th>\n",
+       "      <th>month_cat_male_count</th>\n",
+       "      <th>cat_buys</th>\n",
+       "      <th>cat_male_buy_count</th>\n",
+       "      <th>cat_female_buy_count</th>\n",
+       "      <th>cat_ageGroup_2_counts</th>\n",
+       "      <th>cat_ageGroup_3_counts</th>\n",
+       "      <th>cat_ageGroup_8_counts</th>\n",
+       "      <th>cat_ageGroup_0_counts</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>70</th>\n",
+       "      <td>319670</td>\n",
+       "      <td>175</td>\n",
+       "      <td>4760</td>\n",
+       "      <td>1111</td>\n",
+       "      <td>3</td>\n",
+       "      <td>3</td>\n",
+       "      <td>362</td>\n",
+       "      <td>33</td>\n",
+       "      <td>71</td>\n",
+       "      <td>14</td>\n",
+       "      <td>...</td>\n",
+       "      <td>17</td>\n",
+       "      <td>104</td>\n",
+       "      <td>71</td>\n",
+       "      <td>14</td>\n",
+       "      <td>8.0</td>\n",
+       "      <td>6.0</td>\n",
+       "      <td>25</td>\n",
+       "      <td>24</td>\n",
+       "      <td>0</td>\n",
+       "      <td>17</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>269</th>\n",
+       "      <td>355412</td>\n",
+       "      <td>175</td>\n",
+       "      <td>4760</td>\n",
+       "      <td>1110</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>362</td>\n",
+       "      <td>33</td>\n",
+       "      <td>71</td>\n",
+       "      <td>14</td>\n",
+       "      <td>...</td>\n",
+       "      <td>17</td>\n",
+       "      <td>104</td>\n",
+       "      <td>71</td>\n",
+       "      <td>14</td>\n",
+       "      <td>8.0</td>\n",
+       "      <td>6.0</td>\n",
+       "      <td>25</td>\n",
+       "      <td>24</td>\n",
+       "      <td>0</td>\n",
+       "      <td>17</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>111</th>\n",
+       "      <td>214766</td>\n",
+       "      <td>253</td>\n",
+       "      <td>3263</td>\n",
+       "      <td>1110</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>362</td>\n",
+       "      <td>18</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>...</td>\n",
+       "      <td>2</td>\n",
+       "      <td>18</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>10</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>190</th>\n",
+       "      <td>33745</td>\n",
+       "      <td>175</td>\n",
+       "      <td>4760</td>\n",
+       "      <td>1111</td>\n",
+       "      <td>4</td>\n",
+       "      <td>4</td>\n",
+       "      <td>362</td>\n",
+       "      <td>33</td>\n",
+       "      <td>71</td>\n",
+       "      <td>14</td>\n",
+       "      <td>...</td>\n",
+       "      <td>17</td>\n",
+       "      <td>104</td>\n",
+       "      <td>71</td>\n",
+       "      <td>14</td>\n",
+       "      <td>8.0</td>\n",
+       "      <td>6.0</td>\n",
+       "      <td>25</td>\n",
+       "      <td>24</td>\n",
+       "      <td>0</td>\n",
+       "      <td>17</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>325</th>\n",
+       "      <td>353447</td>\n",
+       "      <td>170</td>\n",
+       "      <td>3828</td>\n",
+       "      <td>601</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>5</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25</th>\n",
+       "      <td>206032</td>\n",
+       "      <td>281</td>\n",
+       "      <td>246</td>\n",
+       "      <td>1111</td>\n",
+       "      <td>6</td>\n",
+       "      <td>14</td>\n",
+       "      <td>362</td>\n",
+       "      <td>19</td>\n",
+       "      <td>0</td>\n",
+       "      <td>3</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>20</td>\n",
+       "      <td>0</td>\n",
+       "      <td>3</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>63</th>\n",
+       "      <td>353962</td>\n",
+       "      <td>184</td>\n",
+       "      <td>145</td>\n",
+       "      <td>1111</td>\n",
+       "      <td>6</td>\n",
+       "      <td>6</td>\n",
+       "      <td>362</td>\n",
+       "      <td>25</td>\n",
+       "      <td>9</td>\n",
+       "      <td>5</td>\n",
+       "      <td>...</td>\n",
+       "      <td>8</td>\n",
+       "      <td>36</td>\n",
+       "      <td>9</td>\n",
+       "      <td>5</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>8</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>118</th>\n",
+       "      <td>402251</td>\n",
+       "      <td>175</td>\n",
+       "      <td>4760</td>\n",
+       "      <td>1103</td>\n",
+       "      <td>0</td>\n",
+       "      <td>4</td>\n",
+       "      <td>362</td>\n",
+       "      <td>33</td>\n",
+       "      <td>71</td>\n",
+       "      <td>14</td>\n",
+       "      <td>...</td>\n",
+       "      <td>17</td>\n",
+       "      <td>104</td>\n",
+       "      <td>71</td>\n",
+       "      <td>14</td>\n",
+       "      <td>8.0</td>\n",
+       "      <td>6.0</td>\n",
+       "      <td>25</td>\n",
+       "      <td>24</td>\n",
+       "      <td>0</td>\n",
+       "      <td>17</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>23</th>\n",
+       "      <td>206032</td>\n",
+       "      <td>281</td>\n",
+       "      <td>246</td>\n",
+       "      <td>1107</td>\n",
+       "      <td>6</td>\n",
+       "      <td>14</td>\n",
+       "      <td>362</td>\n",
+       "      <td>19</td>\n",
+       "      <td>0</td>\n",
+       "      <td>3</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>20</td>\n",
+       "      <td>0</td>\n",
+       "      <td>3</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>96</th>\n",
+       "      <td>46699</td>\n",
+       "      <td>175</td>\n",
+       "      <td>4760</td>\n",
+       "      <td>1106</td>\n",
+       "      <td>1</td>\n",
+       "      <td>13</td>\n",
+       "      <td>362</td>\n",
+       "      <td>33</td>\n",
+       "      <td>71</td>\n",
+       "      <td>14</td>\n",
+       "      <td>...</td>\n",
+       "      <td>17</td>\n",
+       "      <td>104</td>\n",
+       "      <td>71</td>\n",
+       "      <td>14</td>\n",
+       "      <td>8.0</td>\n",
+       "      <td>6.0</td>\n",
+       "      <td>25</td>\n",
+       "      <td>24</td>\n",
+       "      <td>0</td>\n",
+       "      <td>17</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>77 rows × 44 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     user_id  item_id  seller_id  time_stamp  1111 action count  \\\n",
+       "70    319670      175       4760        1111                  3   \n",
+       "269   355412      175       4760        1110                  0   \n",
+       "111   214766      253       3263        1110                  0   \n",
+       "190    33745      175       4760        1111                  4   \n",
+       "325   353447      170       3828         601                  0   \n",
+       "..       ...      ...        ...         ...                ...   \n",
+       "25    206032      281        246        1111                  6   \n",
+       "63    353962      184        145        1111                  6   \n",
+       "118   402251      175       4760        1103                  0   \n",
+       "23    206032      281        246        1107                  6   \n",
+       "96     46699      175       4760        1106                  1   \n",
+       "\n",
+       "     last month action count  month_total_action_count  merchant_female_count  \\\n",
+       "70                         3                       362                     33   \n",
+       "269                        1                       362                     33   \n",
+       "111                        2                       362                     18   \n",
+       "190                        4                       362                     33   \n",
+       "325                        0                         5                      2   \n",
+       "..                       ...                       ...                    ...   \n",
+       "25                        14                       362                     19   \n",
+       "63                         6                       362                     25   \n",
+       "118                        4                       362                     33   \n",
+       "23                        14                       362                     19   \n",
+       "96                        13                       362                     33   \n",
+       "\n",
+       "     month_merchant_male_count  merchant_buys  ...  item_ageGroup_0_counts  \\\n",
+       "70                          71             14  ...                      17   \n",
+       "269                         71             14  ...                      17   \n",
+       "111                          0              1  ...                       2   \n",
+       "190                         71             14  ...                      17   \n",
+       "325                          0              0  ...                       1   \n",
+       "..                         ...            ...  ...                     ...   \n",
+       "25                           0              3  ...                       0   \n",
+       "63                           9              5  ...                       8   \n",
+       "118                         71             14  ...                      17   \n",
+       "23                           0              3  ...                       0   \n",
+       "96                          71             14  ...                      17   \n",
+       "\n",
+       "     cat_monthly_action_count  month_cat_male_count  cat_buys  \\\n",
+       "70                        104                    71        14   \n",
+       "269                       104                    71        14   \n",
+       "111                        18                     0         1   \n",
+       "190                       104                    71        14   \n",
+       "325                         1                     0         0   \n",
+       "..                        ...                   ...       ...   \n",
+       "25                         20                     0         3   \n",
+       "63                         36                     9         5   \n",
+       "118                       104                    71        14   \n",
+       "23                         20                     0         3   \n",
+       "96                        104                    71        14   \n",
+       "\n",
+       "     cat_male_buy_count  cat_female_buy_count  cat_ageGroup_2_counts  \\\n",
+       "70                  8.0                   6.0                     25   \n",
+       "269                 8.0                   6.0                     25   \n",
+       "111                 0.0                   1.0                     10   \n",
+       "190                 8.0                   6.0                     25   \n",
+       "325                 0.0                   0.0                      0   \n",
+       "..                  ...                   ...                    ...   \n",
+       "25                  0.0                   3.0                      1   \n",
+       "63                  1.0                   4.0                      2   \n",
+       "118                 8.0                   6.0                     25   \n",
+       "23                  0.0                   3.0                      1   \n",
+       "96                  8.0                   6.0                     25   \n",
+       "\n",
+       "     cat_ageGroup_3_counts  cat_ageGroup_8_counts  cat_ageGroup_0_counts  \n",
+       "70                      24                      0                     17  \n",
+       "269                     24                      0                     17  \n",
+       "111                      0                      0                      2  \n",
+       "190                     24                      0                     17  \n",
+       "325                      0                      0                      1  \n",
+       "..                     ...                    ...                    ...  \n",
+       "25                       0                      0                      0  \n",
+       "63                       1                      0                      8  \n",
+       "118                     24                      0                     17  \n",
+       "23                       0                      0                      0  \n",
+       "96                      24                      0                     17  \n",
+       "\n",
+       "[77 rows x 44 columns]"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X_test"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0,\n",
+       "       1, 0, 0, 0, 0, 0, 0, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 0, 0,\n",
+       "       0, 0, 0, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 0, 0, 0, 0, 0, 0, 0,\n",
+       "       0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0])"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "KNN Accuracy: 0.9662337662337662\n"
+      "KNN Accuracy: 0.961038961038961\n"
      ]
     }
    ],
    "source": [
-    "samples = len(y_test)\n",
-    "success = 0\n",
-    "for i in range(samples):\n",
-    "    if y_preds[i] == y_train[i]:\n",
-    "        success += 1\n",
-    "\n",
-    "accuracy = success / samples\n",
-    "print(f'KNN Accuracy: {accuracy}')\n"
+    "\n"
    ]
   },
   {
