feat(classifiers): Finalized metrics for all prediction models

--- a/Models/NNClassifier.ipynb
+++ b/Models/NNClassifier.ipynb
@@ -11,7 +11,15 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2023-05-01 18:37:10.090653: I tensorflow/stream_executor/platform/default/dso_loader.cc:49] Successfully opened dynamic library libcudart.so.10.1\n"
+     ]
+    }
+   ],
    "source": [
     "from keras import models\n",
     "from keras import layers\n",
@@ -281,7 +289,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -290,7 +298,7 @@
        "(385, 182)"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -303,7 +311,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train_complete, test_complete = train_test_split(train_complete, test_size=0.2, random_state=550)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -312,7 +329,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -321,7 +338,7 @@
        "(385, 45)"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -333,7 +350,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -342,7 +359,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -351,9 +368,69 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2023-05-01 18:37:23.385901: I tensorflow/compiler/jit/xla_cpu_device.cc:41] Not creating XLA devices, tf_xla_enable_xla_devices not set\n",
+      "2023-05-01 18:37:23.387347: I tensorflow/stream_executor/platform/default/dso_loader.cc:49] Successfully opened dynamic library libcuda.so.1\n",
+      "2023-05-01 18:37:23.489874: E tensorflow/stream_executor/cuda/cuda_gpu_executor.cc:927] could not open file to read NUMA node: /sys/bus/pci/devices/0000:2b:00.0/numa_node\n",
+      "Your kernel may have been built without NUMA support.\n",
+      "2023-05-01 18:37:23.490058: I tensorflow/core/common_runtime/gpu/gpu_device.cc:1720] Found device 0 with properties: \n",
+      "pciBusID: 0000:2b:00.0 name: NVIDIA GeForce RTX 3070 computeCapability: 8.6\n",
+      "coreClock: 1.77GHz coreCount: 46 deviceMemorySize: 8.00GiB deviceMemoryBandwidth: 417.29GiB/s\n",
+      "2023-05-01 18:37:23.490085: I tensorflow/stream_executor/platform/default/dso_loader.cc:49] Successfully opened dynamic library libcudart.so.10.1\n",
+      "2023-05-01 18:37:23.514267: I tensorflow/stream_executor/platform/default/dso_loader.cc:49] Successfully opened dynamic library libcublas.so.10\n",
+      "2023-05-01 18:37:23.514348: I tensorflow/stream_executor/platform/default/dso_loader.cc:49] Successfully opened dynamic library libcublasLt.so.10\n",
+      "2023-05-01 18:37:23.526922: I tensorflow/stream_executor/platform/default/dso_loader.cc:49] Successfully opened dynamic library libcufft.so.10\n",
+      "2023-05-01 18:37:23.529778: I tensorflow/stream_executor/platform/default/dso_loader.cc:49] Successfully opened dynamic library libcurand.so.10\n",
+      "2023-05-01 18:37:23.552647: I tensorflow/stream_executor/platform/default/dso_loader.cc:49] Successfully opened dynamic library libcusolver.so.10\n",
+      "2023-05-01 18:37:23.556092: I tensorflow/stream_executor/platform/default/dso_loader.cc:49] Successfully opened dynamic library libcusparse.so.10\n",
+      "2023-05-01 18:37:23.592720: I tensorflow/stream_executor/platform/default/dso_loader.cc:49] Successfully opened dynamic library libcudnn.so.7\n",
+      "2023-05-01 18:37:23.592924: E tensorflow/stream_executor/cuda/cuda_gpu_executor.cc:927] could not open file to read NUMA node: /sys/bus/pci/devices/0000:2b:00.0/numa_node\n",
+      "Your kernel may have been built without NUMA support.\n",
+      "2023-05-01 18:37:23.592982: E tensorflow/stream_executor/cuda/cuda_gpu_executor.cc:927] could not open file to read NUMA node: /sys/bus/pci/devices/0000:2b:00.0/numa_node\n",
+      "Your kernel may have been built without NUMA support.\n",
+      "2023-05-01 18:37:23.592990: I tensorflow/core/common_runtime/gpu/gpu_device.cc:1862] Adding visible gpu devices: 0\n",
+      "2023-05-01 18:37:23.594123: I tensorflow/core/platform/cpu_feature_guard.cc:142] This TensorFlow binary is optimized with oneAPI Deep Neural Network Library (oneDNN) to use the following CPU instructions in performance-critical operations:  SSE4.1 SSE4.2 AVX AVX2 FMA\n",
+      "To enable them in other operations, rebuild TensorFlow with the appropriate compiler flags.\n",
+      "2023-05-01 18:37:23.595999: I tensorflow/compiler/jit/xla_gpu_device.cc:99] Not creating XLA devices, tf_xla_enable_xla_devices not set\n",
+      "2023-05-01 18:37:23.596127: E tensorflow/stream_executor/cuda/cuda_gpu_executor.cc:927] could not open file to read NUMA node: /sys/bus/pci/devices/0000:2b:00.0/numa_node\n",
+      "Your kernel may have been built without NUMA support.\n",
+      "2023-05-01 18:37:23.596144: I tensorflow/core/common_runtime/gpu/gpu_device.cc:1720] Found device 0 with properties: \n",
+      "pciBusID: 0000:2b:00.0 name: NVIDIA GeForce RTX 3070 computeCapability: 8.6\n",
+      "coreClock: 1.77GHz coreCount: 46 deviceMemorySize: 8.00GiB deviceMemoryBandwidth: 417.29GiB/s\n",
+      "2023-05-01 18:37:23.596168: I tensorflow/stream_executor/platform/default/dso_loader.cc:49] Successfully opened dynamic library libcudart.so.10.1\n",
+      "2023-05-01 18:37:23.596190: I tensorflow/stream_executor/platform/default/dso_loader.cc:49] Successfully opened dynamic library libcublas.so.10\n",
+      "2023-05-01 18:37:23.596198: I tensorflow/stream_executor/platform/default/dso_loader.cc:49] Successfully opened dynamic library libcublasLt.so.10\n",
+      "2023-05-01 18:37:23.596204: I tensorflow/stream_executor/platform/default/dso_loader.cc:49] Successfully opened dynamic library libcufft.so.10\n",
+      "2023-05-01 18:37:23.596211: I tensorflow/stream_executor/platform/default/dso_loader.cc:49] Successfully opened dynamic library libcurand.so.10\n",
+      "2023-05-01 18:37:23.596217: I tensorflow/stream_executor/platform/default/dso_loader.cc:49] Successfully opened dynamic library libcusolver.so.10\n",
+      "2023-05-01 18:37:23.596222: I tensorflow/stream_executor/platform/default/dso_loader.cc:49] Successfully opened dynamic library libcusparse.so.10\n",
+      "2023-05-01 18:37:23.596228: I tensorflow/stream_executor/platform/default/dso_loader.cc:49] Successfully opened dynamic library libcudnn.so.7\n",
+      "2023-05-01 18:37:23.596264: E tensorflow/stream_executor/cuda/cuda_gpu_executor.cc:927] could not open file to read NUMA node: /sys/bus/pci/devices/0000:2b:00.0/numa_node\n",
+      "Your kernel may have been built without NUMA support.\n",
+      "2023-05-01 18:37:23.596294: E tensorflow/stream_executor/cuda/cuda_gpu_executor.cc:927] could not open file to read NUMA node: /sys/bus/pci/devices/0000:2b:00.0/numa_node\n",
+      "Your kernel may have been built without NUMA support.\n",
+      "2023-05-01 18:37:23.596298: I tensorflow/core/common_runtime/gpu/gpu_device.cc:1862] Adding visible gpu devices: 0\n",
+      "2023-05-01 18:37:23.596602: I tensorflow/stream_executor/platform/default/dso_loader.cc:49] Successfully opened dynamic library libcudart.so.10.1\n",
+      "2023-05-01 18:37:26.075210: I tensorflow/core/common_runtime/gpu/gpu_device.cc:1261] Device interconnect StreamExecutor with strength 1 edge matrix:\n",
+      "2023-05-01 18:37:26.075226: I tensorflow/core/common_runtime/gpu/gpu_device.cc:1267]      0 \n",
+      "2023-05-01 18:37:26.075230: I tensorflow/core/common_runtime/gpu/gpu_device.cc:1280] 0:   N \n",
+      "2023-05-01 18:37:26.075827: E tensorflow/stream_executor/cuda/cuda_gpu_executor.cc:927] could not open file to read NUMA node: /sys/bus/pci/devices/0000:2b:00.0/numa_node\n",
+      "Your kernel may have been built without NUMA support.\n",
+      "2023-05-01 18:37:26.075840: I tensorflow/core/common_runtime/gpu/gpu_device.cc:1489] Could not identify NUMA node of platform GPU id 0, defaulting to 0.  Your kernel may not have been built with NUMA support.\n",
+      "2023-05-01 18:37:26.075889: E tensorflow/stream_executor/cuda/cuda_gpu_executor.cc:927] could not open file to read NUMA node: /sys/bus/pci/devices/0000:2b:00.0/numa_node\n",
+      "Your kernel may have been built without NUMA support.\n",
+      "2023-05-01 18:37:26.075928: E tensorflow/stream_executor/cuda/cuda_gpu_executor.cc:927] could not open file to read NUMA node: /sys/bus/pci/devices/0000:2b:00.0/numa_node\n",
+      "Your kernel may have been built without NUMA support.\n",
+      "2023-05-01 18:37:26.075948: I tensorflow/core/common_runtime/gpu/gpu_device.cc:1406] Created TensorFlow device (/job:localhost/replica:0/task:0/device:GPU:0 with 6545 MB memory) -> physical GPU (device: 0, name: NVIDIA GeForce RTX 3070, pci bus id: 0000:2b:00.0, compute capability: 8.6)\n"
+     ]
+    }
+   ],
    "source": [
     "model = models.Sequential()\n",
     "model.add(layers.Dense(10, activation='relu', input_shape=(train_complete.shape[1]-1,) ))        #label kept getting counted as a feature\n",
@@ -365,33 +442,54 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2023-05-01 18:37:57.727682: I tensorflow/compiler/mlir/mlir_graph_optimization_pass.cc:116] None of the MLIR optimization passes are enabled (registered 2)\n",
+      "2023-05-01 18:37:57.730876: I tensorflow/core/platform/profile_utils/cpu_utils.cc:112] CPU Frequency: 3799990000 Hz\n"
+     ]
+    },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 1/10\n",
-      "10/10 [==============================] - 1s 20ms/step - loss: 23049.4785 - acc: 0.0649 - val_loss: 16011.8721 - val_acc: 0.1039\n",
+      "Epoch 1/10\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2023-05-01 18:37:57.940351: I tensorflow/stream_executor/platform/default/dso_loader.cc:49] Successfully opened dynamic library libcublas.so.10\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10/10 [==============================] - 1s 28ms/step - loss: 8610.9122 - acc: 0.0720 - val_loss: 6045.6055 - val_acc: 0.0779\n",
       "Epoch 2/10\n",
-      "10/10 [==============================] - 0s 5ms/step - loss: 18845.4082 - acc: 0.0649 - val_loss: 12931.2305 - val_acc: 0.1039\n",
+      "10/10 [==============================] - 0s 6ms/step - loss: 4787.6668 - acc: 0.0850 - val_loss: 2376.4036 - val_acc: 0.1039\n",
       "Epoch 3/10\n",
-      "10/10 [==============================] - 0s 6ms/step - loss: 14998.8672 - acc: 0.0649 - val_loss: 10003.8623 - val_acc: 0.1039\n",
+      "10/10 [==============================] - 0s 6ms/step - loss: 1540.6206 - acc: 0.2331 - val_loss: 51.1551 - val_acc: 0.9221\n",
       "Epoch 4/10\n",
-      "10/10 [==============================] - 0s 6ms/step - loss: 11338.7842 - acc: 0.0649 - val_loss: 7275.4092 - val_acc: 0.1039\n",
+      "10/10 [==============================] - 0s 6ms/step - loss: 100.8956 - acc: 0.9318 - val_loss: 104.7339 - val_acc: 0.9221\n",
       "Epoch 5/10\n",
-      "10/10 [==============================] - 0s 6ms/step - loss: 8189.5137 - acc: 0.0649 - val_loss: 4996.6104 - val_acc: 0.1039\n",
+      "10/10 [==============================] - 0s 5ms/step - loss: 129.2995 - acc: 0.9446 - val_loss: 117.7990 - val_acc: 0.9221\n",
       "Epoch 6/10\n",
-      "10/10 [==============================] - 0s 5ms/step - loss: 5091.2812 - acc: 0.0649 - val_loss: 2390.0366 - val_acc: 0.1299\n",
+      "10/10 [==============================] - 0s 6ms/step - loss: 215.7888 - acc: 0.9177 - val_loss: 114.9373 - val_acc: 0.9221\n",
       "Epoch 7/10\n",
-      "10/10 [==============================] - 0s 5ms/step - loss: 1687.8425 - acc: 0.1558 - val_loss: 34.0043 - val_acc: 0.6234\n",
+      "10/10 [==============================] - 0s 7ms/step - loss: 163.2288 - acc: 0.9335 - val_loss: 107.1727 - val_acc: 0.9221\n",
       "Epoch 8/10\n",
-      "10/10 [==============================] - 0s 5ms/step - loss: 10.8510 - acc: 0.8377 - val_loss: 19.7061 - val_acc: 0.7662\n",
+      "10/10 [==============================] - 0s 5ms/step - loss: 158.9226 - acc: 0.9253 - val_loss: 96.4321 - val_acc: 0.9221\n",
       "Epoch 9/10\n",
-      "10/10 [==============================] - 0s 5ms/step - loss: 7.7168 - acc: 0.8604 - val_loss: 12.9809 - val_acc: 0.7792\n",
+      "10/10 [==============================] - 0s 5ms/step - loss: 149.6929 - acc: 0.9237 - val_loss: 84.5377 - val_acc: 0.9221\n",
       "Epoch 10/10\n",
-      "10/10 [==============================] - 0s 5ms/step - loss: 4.5862 - acc: 0.8799 - val_loss: 8.4396 - val_acc: 0.8052\n"
+      "10/10 [==============================] - 0s 5ms/step - loss: 109.7827 - acc: 0.9384 - val_loss: 71.6935 - val_acc: 0.9221\n"
      ]
     }
    ],
@@ -401,6 +499,13 @@
     "                    validation_data= (val_complete.drop('label',axis=1), val_complete['label'])\n",
     "                    )"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -1213,7 +1318,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.1"
+   "version": "3.9.16"
   }
  },
  "nbformat": 4,
